feat: add empty message and styles to the auction page

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -116,6 +116,8 @@
     "available_parcels": "Available parcels",
     "bid": "Bid",
     "description": "Choose the LAND you want to buy",
+    "empty_message":
+      "Find the parcels you want to buy, and add them to your cart. For more help, watch the {video_tutorial_link}",
     "find_available_parcel": "Find available parcel",
     "gas_price": "Gas price",
     "land_price": "Price per LAND",
@@ -127,7 +129,8 @@
     "title": "LAND Cart",
     "token": "Token",
     "token_tooltip": "Click here to select the token",
-    "total_price": "Total price"
+    "total_price": "Total price",
+    "video_tutorial": "video tutorial"
   },
   "authorization": {
     "allow": "Authorize the {contract_link} to operate {symbol} on your behalf",
