--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -111,7 +111,8 @@
     "title": "Decentraland拍卖",
     "tx_failed": "交易失败",
     "video_tutorial": "视频教程",
-    "watch_tutorial": "观看视频教程"
+    "watch_tutorial": "观看视频教程",
+    "welcome": "欢迎来到Decentraland LAND拍卖！"
   },
   "auction_page": {
     "available_parcels": "可用包裹",
